--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Названия сайта во вкладке</title>
+    </head>
+    <body>
 
-</body>
+        <h1>
+            Main title
+        </h1>
+        <h2>
+            title h2
+        </h2>
+        <h3>
+            title h3
+        </h3>
+        <h4>
+            title h4
+        </h4>
+        <h5>
+            title h5
+        </h5>
+        <h6>
+            title h6
+        </h6>
+
+    </body>
 </html>
